--- a/infra/cloud_init.yaml
+++ b/infra/cloud_init.yaml
@@ -14,6 +14,7 @@
 # Note: Content strings here are truncated for example purposes.
 ssh_pwauth: true
 disable_root: false
+hostname: ${hostname}
 
 users:
  - name: jose
@@ -32,8 +33,20 @@ chpasswd:
       password: linux
       type: text
 
+write_files:
+  # Enable IP Forward
+  - path: /etc/sysctl.d/10-ip-forwarding.conf
+    permissions: '0644'
+    content: |
+      net.ipv4.conf.all.forwarding=1
+  - path: /etc/sysctl.d/99-kubernetes-cri.conf
+    content: |
+      net.bridge.bridge-nf-call-iptables  = 1
+      net.ipv4.ip_forward                 = 1
+      net.bridge.bridge-nf-call-ip6tables = 1
+
 package_update: true
-package_upgrade: true
+
 packages:
   # Update the apt package index and install packages needed to use the Docker and Kubernetes apt repositories over HTTPS
   - apt-transport-https
@@ -47,6 +60,12 @@ packages:
   - cri-o
   - cri-o-runc
 
+runcmd:
+  - [ modprobe, br_netfilter]
+  - [ sysctl, "--system"]
+  - [ systemctl, enable, crio ]
+  - [ systemctl, start, crio ]
+  - [ kubeadm, config, images, pull ]
 
 apt:
   conf: | # APT config
