--- a/infra/control-plane/cloud_init.yaml
+++ b/infra/control-plane/cloud_init.yaml
@@ -31,6 +31,9 @@ chpasswd:
       password: linux
       type: text
 
+mounts:
+  - [ swap ]
+
 write_files:
   # Enable IP Forward
   - path: /etc/sysctl.d/10-ip-forwarding.conf
